Added data and analysis

--- a/lakesandwetlands.Rmd
+++ b/lakesandwetlands.Rmd
@@ -1,8 +1,13 @@
 ---
 title: "Lakes and wetlands analysis"
 output: html_document
-date: "2023-12-28"
 ---
+
+  knit: (function(input_file, encoding) {
+    out_dir <- 'docs';
+    rmarkdown::render(input_file,
+      encoding=encoding,
+      output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 
 ```{r readfile}
 # Import package for geographical clustering
